--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -377,7 +377,7 @@ nav.breadcrumb_wrap {
 }
 .border_btn{
     border-radius: 8px;
-    border: 1px solid $neutral_3;
+    border: 1px solid $neutral_3 !important;
     background: $white;
     box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.05);
     @include font(500,14px,normal,$neutral_8);
