--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -1385,6 +1385,7 @@
                 background: $white;
                 height: 38px;
                 padding: 0 12px;
+                font-size: 13px;
             }
             #more_menu {
                 align-items: center;
@@ -1396,6 +1397,12 @@
                     padding: 10px 16px;
                     border-bottom: 1px solid $neutral_2;
                     background: $white;
+                }
+            }
+            .form-select__control{
+                height: 38px;
+                input{
+                    height: auto;
                 }
             }
         }
