--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -1,6 +1,7 @@
 @import './common_style';
 @import './header_style';
 @import './procurement';
+@import "./accordion";
 
 // ---------------- Auth ------------------------------------------------------
 .login_auth_wrap { 
