View detail responsive, Setting home page, changes

--- a/src/assets/scss/customstyle/_accordion.scss
+++ b/src/assets/scss/customstyle/_accordion.scss
@@ -47,6 +47,7 @@
         margin-bottom: 20px;
         .accordion-header{
             .accordion-button {
+                min-height: 86px;
                 background: transparent;
                 padding: 18px 18px 18px 40px;
                 @include font(500,14px,normal,$neutral_8);
